# llm-server

./: .doppler.yaml  .gitignore  .vault.yaml  DNS-SETUP.md  INTEGRATION_TEST_README.md  Makefile  README.md  REMOTE-ACCESS.md  ensure-remote-access.sh  llm-server.sh  pyproject.toml  snake.html  tsconfig.json
litellm/: Dockerfile  README.md  fly.toml  litellm_config.yaml
llm-usage-tracker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
lm-studio/: tunnel
local_llm_env/: __init__.py  cli.py  doppler.py  executor.py  planner.py  spec_schema.py  state.py  types.py
local_llm_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proxy/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  bench.sh  fly.toml  package-lock.json  package.json  test-db.mjs  test-env.mjs  tsconfig.json  tsconfig.test.json  tsconfig.ui.json  usage-dashboard.html  vite.client.config.ts  vite.config.ts  wrangler.jsonc  wrangler.toml
remote-access/: REMOTE-ACCESS.md  _common.sh  setup-controller.sh  setup-target.sh
scripts/: configure-always-on.sh  configure-server-uptime.sh  configure-server.sh  deploy-litellm.sh  deploy-worker.sh  ensure-cursor-cloudflare-access.sh  monitor.sh  setup-mac-all-remote.sh  setup-mac-controller.sh  setup-mac-nomachine.sh  setup-mac-remote-desktop.sh  setup-target-all-remote.sh  setup-target-headless-remote.sh  setup-target-nomachine.sh  setup-target-remote-desktop.sh  setup-tunnel.sh  setup-vllm-tunnel.sh  verify-mac-remote-access.sh
server/: free-ram.sh  free.sh  metrics.sh  server.py  tune.sh
server_test/: benchmark.py  check_api.py  model_info.py  run_tests.py  smoke.py
spec/: local-llm-env.yaml  models.yaml
state/: local-llm-env-state.json
systemd/: lm-studio-cloudflared.service  local-llm-cloudflared.service  local-llm-llamacpp.service  local-llm-lmstudio.service
tests/: test_cloudflare_tunnel.py  test_engine_config.py  test_litellm_api.py  test_litellm_simple.py  test_lm_studio_tunnel.py  test_schema.py  test_server_boot.py  (+2 more)
(+177 files in other folders)
