[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-env"
version = "0.1.0"
description = "Declarative, idempotent reconciler for LM Studio and Cloudflare Tunnel exposure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
local-llm-env = "local_llm_env.cli:main"

[tool.setuptools.packages.find]
include = ["local_llm_env*"]

