[project]
name = "llm-server"
version = "0.1.0"
requires-python = ">=3.11"
optional-dependencies.dev = ["ruff>=0.9", "pyright>=1.1", "pytest>=8", "openai>=1.0", "httpx>=0.27"]

# The server runs from source via sys.path (see server/server.py); nothing is
# packaged. `pip install -e ".[dev]"` only needs to pull in the dev tools.
[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py311"
src = ["server", "lm-studio", "server_test", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
include = ["server", "lm-studio", "server_test", "tests"]
extraPaths = ["server", "lm-studio"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingParameterType = false
